--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "clipboard": "^2.0.8",
     "firebase": "^9.6.1",
     "firebaseui": "^6.0.0",
     "framer-motion": "^4.1.17",
